src/test/ui/error-codes/E0296.rs
#![recursion_limit] //~ ERROR E0296

fn main() {}
